# tech-controllers

./: .devcontainer.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE.md  README.md  __init__.py  assets.py  binary_sensor.py  climate.py  config_flow.py  const.py  devenv.nix  entity.py  hacs.json  manifest.json  pyproject.toml  pytest.ini  repository.json  repository.yaml  requirements.txt  requirements_test.txt  requirements_test_api.txt  ruff.toml  sensor.py  tech.py  test_tech.py
.github/: dependabot.yaml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: update_hacs_manifest.py
.github/workflows/: autolabeler.yaml  pr-labeler.yml  release-drafter.yml  release.yml  tests.yml  validate.yaml
config/: configuration.yaml
custom_components/tech/: CONTRIBUTING.md  LICENSE.md  __init__.py  assets.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  fan.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  tech.py  test_tech.py
custom_components/tech/translations/: cs.json  de.json  emodul.de.json  emodul.en.json  emodul.hu.json  emodul.pl.json  emodul.sk.json  en.json  es.json  et.json  fr.json  hr.json  hu.json  it.json  lt.json  nl.json  pl.json  pt.json  ro.json  ru.json  si.json  sk.json
custom_components/tech/www/: tech-thermostat-card.js
scripts/: setup  test
tests/: __init__.py  common.py  test_widget_logic.py
tests/fixtures/: auth.json  set_constant_temp.json  tech_module.json
tests/fixtures/l12/: menus_summary.json  module.json
tests/fixtures/st491/: menus.json  module.json
tests/tests_api/: __init__.py  conftest.py  test_api.py  test_optimistic_mixin.py
tests/tests_component/: __init__.py  conftest.py  test_config_flow.py  test_init.py
tests/tests_component/fixtures/: get_module_data.json  get_modules.json  get_translations.json  tech_module.json
translations/: emodul.cs.json  emodul.ru.json  en.json
