[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-controllers"
version = "1.0.0"
description = "Home Assistant integration for TECH Sterowniki heating controllers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mariusz Ostaja-Swierczynski", email = "mariusz.ostaja.swierczynski@gmail.com" },
  { name = "anarion80", email = "anarion80@users.noreply.github.com" },
]
maintainers = [
  { name = "anarion80", email = "anarion80@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13.2"
dependencies = [
  "aiodns==3.5.0",
  "colorlog==6.9.0",
  "homeassistant==2025.9.3",
  "pip==25.2",
  "pre_commit==4.3.0",
  "ruff==0.13.0",
  "zlib-ng==1.0.0",
]

[dependency-groups]
test_api = [
  "acme==5.0.0",
  "aiodns==3.5.0",
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.6.1",
  "aiohasupervisor==0.3.2",
  "aiohttp-asyncmdnsresolver==0.1.1",
  "aiohttp-fast-zlib==0.3.0",
  "aiohttp==3.12.15",
  "aiohttp_cors==0.8.1",
  "aiooui==0.1.9",
  "aiosignal==1.4.0",
  "aiozoneinfo==0.2.3",
  "annotatedyaml==0.4.5",
  "astral==2.2",
  "async-interrupt==1.2.2",
  "async_timeout==5.0.1",
  "atomicwrites-homeassistant==1.4.1",
  "attrs==25.3.0",
  "audioop-lts==0.2.1",
  "awesomeversion==25.5.0",
  "bcrypt==4.3.0",
  "bleak-retry-connector==4.4.3",
  "bleak==1.1.1",
  "bluetooth-auto-recovery==1.5.3",
  "bluetooth-data-tools==1.28.2",
  "bluetooth_adapters==2.1.1",
  "boto3==1.40.32",
  "botocore==1.40.32",
  "btsocket==0.3.0",
  "certifi>=2021.5.30",
  "cffi==2.0.0",
  "ciso8601==2.3.2",
  "coverage==7.10.0",
  "cronsim==2.6",
  "cryptography==45.0.3",
  "dbus_fast==2.44.3",
  "envs==1.4",
  "execnet==2.1.1",
  "fnv-hash-fast==1.5.0",
  "fnvhash>=0.1.0,<0.2.0",
  "frozenlist==1.7.0",
  "habluetooth==5.6.4",
  "hass-nabucasa==1.1.1",
  "home-assistant-bluetooth==1.13.1",
  "httpx==0.28.1",
  "idna==3.10",
  "ifaddr==0.2.0",
  "iniconfig==2.1.0",
  "Jinja2==3.1.6",
  "jmespath==1.0.1",
  "josepy==2.1.0",
  "libpcap>=1.11.0b25",
  "lru-dict==1.3.0",
  "markupsafe==3.0.2",
  "mashumaro==3.16",
  "multidict==6.6.4",
  "orjson==3.11.3",
  "packaging>=23.1",
  "Pillow==11.3.0",
  "pluggy==1.6.0",
  "propcache==0.3.2",
  "psutil-home-assistant==0.0.1",
  "pycognito==2024.5.1",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "pyOpenSSL==25.1.0",
  "pyrfc3339==2.1.0",
  "pytest-aiohttp==1.1.0",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "pytest-emoji==0.2.0",
  "pytest-md==0.2.0",
  "pytest-sugar==1.0.0",
  "pytest-test-groups==1.2.1",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "pytest==8.4.1",
  "python-dateutil>=2.1,<3.0.0",
  "python-slugify==8.0.4",
  "PyTurboJPEG==1.8.2",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "regex==2024.11.6",
  "requests==2.32.4",
  "securetar==2025.2.1",
  "sentence-stream==1.2.0",
  "six==1.17.0",
  "snitun==0.44.0",
  "SQLAlchemy==2.0.41",
  "standard-aifc==3.13.0",
  "standard-telnetlib==3.13.0",
  "termcolor==3.1.0",
  "text_unidecode==1.3",
  "typing-extensions>=4.15.0,<5.0",
  "ulid-transform==1.4.0",
  "urllib3>=2.0",
  "uv==0.8.9",
  "voluptuous-openapi==0.1.0",
  "voluptuous-serialize==2.7.0",
  "voluptuous==0.15.2",
  "webrtc-models==0.3.0",
  "yarl==1.20.1",
  "zeroconf==0.147.0",
]

test = [
  "acme==5.0.0",
  "aiodns==3.5.0",
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.6.1",
  "aiohasupervisor==0.3.2",
  "aiohttp-asyncmdnsresolver==0.1.1",
  "aiohttp-fast-zlib==0.3.0",
  "aiohttp==3.12.15",
  "aiohttp_cors==0.8.1",
  "aiooui==0.1.9",
  "aiosignal==1.4.0",
  "aiozoneinfo==0.2.3",
  "annotatedyaml==0.4.5",
  "astral==2.2",
  "async-interrupt==1.2.2",
  "async_timeout==5.0.1",
  "atomicwrites-homeassistant==1.4.1",
  "attrs==25.3.0",
  "audioop-lts==0.2.1",
  "awesomeversion==25.5.0",
  "bcrypt==4.3.0",
  "bleak-retry-connector==4.4.3",
  "bleak==1.1.1",
  "bluetooth-auto-recovery==1.5.3",
  "bluetooth-data-tools==1.28.2",
  "bluetooth_adapters==2.1.1",
  "boto3==1.40.32",
  "botocore==1.40.32",
  "btsocket==0.3.0",
  "certifi>=2021.5.30",
  "cffi==2.0.0",
  "ciso8601==2.3.2",
  "coverage==7.10.0",
  "cronsim==2.6",
  "cryptography==45.0.3",
  "dbus_fast==2.44.3",
  "envs==1.4",
  "execnet==2.1.1",
  "fnv-hash-fast==1.5.0",
  "fnvhash>=0.1.0,<0.2.0",
  "frozenlist==1.7.0",
  "habluetooth==5.6.4",
  "hass-nabucasa==1.1.1",
  "home-assistant-bluetooth==1.13.1",
  "httpx==0.28.1",
  "idna==3.10",
  "ifaddr==0.2.0",
  "iniconfig==2.1.0",
  "Jinja2==3.1.6",
  "jmespath==1.0.1",
  "josepy==2.1.0",
  "libpcap>=1.11.0b25",
  "lru-dict==1.3.0",
  "markupsafe==3.0.2",
  "mashumaro==3.16",
  "multidict==6.6.4",
  "orjson==3.11.3",
  "packaging>=23.1",
  "Pillow==11.3.0",
  "pluggy==1.6.0",
  "propcache==0.3.2",
  "psutil-home-assistant==0.0.1",
  "pycognito==2024.5.1",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "pyOpenSSL==25.1.0",
  "pyrfc3339==2.1.0",
  "pytest-aiohttp==1.1.0",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "pytest-emoji==0.2.0",
  "pytest-homeassistant-custom-component==0.13.280",
  "pytest-md==0.2.0",
  "pytest-sugar==1.0.0",
  "pytest-test-groups==1.2.1",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "pytest==8.4.1",
  "python-dateutil>=2.1,<3.0.0",
  "python-slugify==8.0.4",
  "PyTurboJPEG==1.8.2",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "regex==2024.11.6",
  "requests==2.32.4",
  "securetar==2025.2.1",
  "sentence-stream==1.2.0",
  "six==1.17.0",
  "snitun==0.44.0",
  "SQLAlchemy==2.0.41",
  "standard-aifc==3.13.0",
  "standard-telnetlib==3.13.0",
  "termcolor==3.1.0",
  "text_unidecode==1.3",
  "typing-extensions>=4.15.0,<5.0",
  "ulid-transform==1.4.0",
  "urllib3>=2.0",
  "uv==0.8.9",
  "voluptuous-openapi==0.1.0",
  "voluptuous-serialize==2.7.0",
  "voluptuous==0.15.2",
  "webrtc-models==0.3.0",
  "yarl==1.20.1",
  "zeroconf==0.147.0",
]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[project.urls]
Homepage = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers"
Repository = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers.git"
Issues = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers/issues"
Changelog = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers/releases"
