[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-controllers"
version = "1.0.0"
description = "Home Assistant integration for TECH Sterowniki heating controllers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mariusz Ostaja-Swierczynski", email = "mariusz.ostaja.swierczynski@gmail.com" },
  { name = "anarion80", email = "anarion80@users.noreply.github.com" },
]
maintainers = [
  { name = "anarion80", email = "anarion80@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13.2"
dependencies = [
  "aiodns==3.6.1",
  # Integrations may depend on hassio integration without listing it to
  # change behavior based on presence of supervisor. Deprecated with #127228
  # Lib can be removed with 2025.11
  "aiohasupervisor==0.3.3",
  "aiohttp==3.13.3",
  "aiohttp_cors==0.8.1",
  "aiohttp-fast-zlib==0.3.0",
  "aiohttp-asyncmdnsresolver==0.1.1",
  "aiozoneinfo==0.2.3",
  "annotatedyaml==1.0.2",
  "astral==2.2",
  "async-interrupt==1.2.2",
  "attrs==25.4.0",
  "atomicwrites-homeassistant==1.4.1",
  "audioop-lts==0.2.1",
  "awesomeversion==25.8.0",
  "bcrypt==5.0.0",
  "certifi>=2021.5.30",
  "ciso8601==2.3.3",
  "cronsim==2.7",
  "fnv-hash-fast==1.6.0",
  # hass-nabucasa is imported by helpers which don't depend on the cloud
  # integration
  "hass-nabucasa==1.7.0",
  # When bumping httpx, please check the version pins of
  # httpcore, anyio, and h11 in gen_requirements_all
  "httpx==0.28.1",
  "home-assistant-bluetooth==1.13.1",
  "homeassistant==2026.1.1",
  "ifaddr==0.2.0",
  "Jinja2==3.1.6",
  "lru-dict==1.3.0",
  "PyJWT==2.10.1",
  # PyJWT has loose dependency. We want the latest one.
  "cryptography==46.0.2",
  "Pillow==12.0.0",
  "propcache==0.4.1",
  "pyOpenSSL==25.3.0",
  "orjson==3.11.3",
  "packaging>=23.1",
  "psutil-home-assistant==0.0.1",
  "python-slugify==8.0.4",
  "PyYAML==6.0.3",
  "requests==2.32.5",
  "securetar==2025.2.1",
  "SQLAlchemy==2.0.41",
  "standard-aifc==3.13.0",
  "standard-telnetlib==3.13.0",
  "typing-extensions>=4.15.0,<5.0",
  "ulid-transform==1.5.2",
  "urllib3>=2.0",
  "uv==0.9.17",
  "voluptuous==0.15.2",
  "voluptuous-serialize==2.7.0",
  "voluptuous-openapi==0.2.0",
  "yarl==1.22.0",
  "webrtc-models==0.3.0",
  "zeroconf==0.148.0",
]

[dependency-groups]
test_api = [
  "astroid==4.0.1",
  "coverage==7.10.6",
  "freezegun==1.5.2",
  "librt==0.2.1",                                   # internal mypy dependency
  "license-expression==30.4.3",
  "mock-open==1.4.0",
  "mypy-dev==1.19.0a4",
  "prek==0.2.28",
  "pydantic==2.12.2",
  "pylint==4.0.1",
  "pylint-per-file-ignores==1.4.0",
  "pipdeptree==2.26.1",
  "pytest-asyncio==1.3.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-freezer==0.4.9",
  "pytest-github-actions-annotate-failures==0.3.0",
  "pytest-socket==0.7.0",
  "pytest-sugar==1.0.0",
  "pytest-timeout==2.4.0",
  "pytest-unordered==0.7.0",
  "pytest-picked==0.5.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.0",
  "pytest-md==0.2.0",
  "pytest-emoji==0.2.0",
  "requests-mock==1.12.1",
  "respx==0.22.0",
  "syrupy==5.0.0",
  "tqdm==4.67.1",
]

test = [
  "astroid==4.0.1",
  "coverage==7.10.6",
  "freezegun==1.5.2",
  "librt==0.2.1",                                    # internal mypy dependency
  "license-expression==30.4.3",
  "mock-open==1.4.0",
  "mypy-dev==1.19.0a4",
  "prek==0.2.28",
  "pydantic==2.12.2",
  "pylint==4.0.1",
  "pylint-per-file-ignores==1.4.0",
  "pipdeptree==2.26.1",
  "pytest-asyncio==1.3.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-freezer==0.4.9",
  "pytest-github-actions-annotate-failures==0.3.0",
  "pytest-socket==0.7.0",
  "pytest-sugar==1.0.0",
  "pytest-timeout==2.4.0",
  "pytest-unordered==0.7.0",
  "pytest-picked==0.5.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.0",
  "pytest-md==0.2.0",
  "pytest-emoji==0.2.0",
  "requests-mock==1.12.1",
  "respx==0.22.0",
  "syrupy==5.0.0",
  "tqdm==4.67.1",
  "pytest-homeassistant-custom-component==0.13.306",
]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[project.urls]
Homepage = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers"
Repository = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers.git"
Issues = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers/issues"
Changelog = "https://github.com/mariusz-ostoja-swierczynski/tech-controllers/releases"
